--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Scratcherの情報検索</h1>
     <form>
       <input type="name" id="scratcher_name" placeholder="情報検索したいScratcherのユーザー名>
-      <button id="search">検索！</button>
+      <input id="search" type="button" value="button" onclick="buttonClick()">検索！</button>
     </form>
   </body>
 </html>
